--- a/src/app/pages/auth/login-page/login-page.component.css
+++ b/src/app/pages/auth/login-page/login-page.component.css
@@ -14,6 +14,11 @@
   }
 }
 
+header h1 {
+  text-align: center;
+  color: var(--mat-sys-on-surface);
+}
+
 footer {
   color: var(--mat-sys-on-surface-variant);
   text-align: center;
